Update README.md with full documentation and launch guides